<resources>
    <string name="app_name">CoAP NAPT Timeout Tester</string>

    <string name="action_settings">Settings</string>

    <string name="server_label">CoAP Server: </string>
    <string name="server_hint">Hostname or IP</string>
    <string name="server_default">141.83.157.155</string>

    <string name="port_hint">5683</string>
    <string name="port_default">5683</string>

    <string name="network_label">Current Network:</string>
    <string name="client_ip_label">Current private IP:</string>

    <string name="elapsed">Waiting:</string>
    <string name="sec">s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
</resources>
