<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".PingClient"
    android:orientation="vertical">

    <!--Server (name or IP) and port-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_label"
            android:paddingRight="5dp"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/txt_server"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/server_hint"
            android:background="@drawable/rounded_rectangle"
            android:padding="5dp"
            android:text="@string/server_default"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:padding="5dp"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/txt_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rounded_rectangle"
            android:padding="5dp"
            android:hint="@string/port_hint"
            android:text="@string/port_default"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/network_label"/>

        <TextView
            android:id="@+id/txt_network"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/client_ip_label"/>

        <TextView
            android:id="@+id/txt_client_ip"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elapsed"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:layout_margin="3dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/sec"-->
            <!--android:layout_gravity="center_vertical"/>-->

        <!--<Space-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="1dp"-->
            <!--android:layout_weight="1"/>-->

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"/>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <!--Ping Results-->
    <EditText
        android:id="@+id/txt_responses"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="top"
        android:background="@drawable/rounded_rectangle"
        android:inputType="none" />

</LinearLayout>
